# gordp

./: .gitignore  01.connect_initial.go  02.basic_setting_exchange.go  03.channel_connection.go  05.secure_settings_exchange.go  06.licensing.go  07.capabilities_exchange.go  08.connection_finalization.go  09.data_exchange.go  10.keyboard_input.go  CONTRIBUTING.md  Dockerfile  Future.md  LICENSE  Makefile  README.md  build_gui.sh  dependencies.md  docker-compose.yml  go.mod  go.sum  gordp.go  gordp_test.go  gordp_unit_test.go  install.ps1  install.sh  stubs.md  testing_infrastructure.md
.github/workflows/: ci.yml  mobile.yml  qt-gui.yml  release.yml  security.yml
config/: config.go
core/: asn1.go  exception.go  stream.go
di/: container.go
docs/: protocol.md
examples/: comprehensive_client.go  interactive_client.go
examples/config_example/: config.json  config_client.go
examples/di_example/: di_example.go
examples/interactive_example/: interactive_client.go
examples/management_example/: management_console.go
examples/plugin_example/: plugin_demo.go
examples/webrtc_example/: webrtc_gateway.go
glog/: structured.go  structured_test.go
gui/: README.md  main.go
gui/connection/: connection_dialog.go
gui/display/: rdp_display.go  rdp_processor.go
gui/input/: keyboard_handler.go  mouse_handler.go
gui/mainwindow/: mainwindow.go
gui/multimonitor/: monitor_dialog.go  monitor_manager.go
gui/performance/: performance_dialog.go  performance_monitor.go
gui/plugins/: plugin_dialog.go  plugin_manager.go
gui/settings/: settings_dialog.go
gui/virtualchannels/: audio_handler.go  clipboard_handler.go  device_handler.go  virtual_channel_dialog.go  virtual_channel_manager.go
management/: console.go
mobile/: mobile_client.go  mobile_client_advanced.go  mobile_client_test
plugin/: plugin.go
plugin/examples/: logger_plugin.go  performance_plugin.go
proto/accessibility/: accessibility_features.go
proto/audio/: audio.go
proto/bitmap/: bitmap.go  bitmap_test.go  ioutil.go  rdp60.go  rle.go
proto/capability/: capability.go  remote_programs_capabilityset.go  ts_bitmap_capabilityset.go  ts_bitmapcache_capabilityset.go  ts_bitmapcache_capabilityset_rev2.go  ts_bitmapcache_hostsupport_capabilityset.go  ts_bitmapcodecs_capabilityset.go  ts_brush_capabilityset.go  ts_font_capabilityset.go  (+20 more)
qt-gui/: CMakeLists.txt  build.sh
qt-gui/docs/: USER_MANUAL.md
qt-gui/resources/: resources.qrc
qt-gui/resources/styles/: modern.qss
qt-gui/src/: main.cpp
qt-gui/src/connection/: connection_dialog.cpp  connection_dialog.h  connection_dialog.ui
qt-gui/src/display/: rdp_display.cpp  rdp_display.h
qt-gui/src/input/: input_handler.cpp  input_handler.h
qt-gui/src/mainwindow/: mainwindow.cpp  mainwindow.h  mainwindow.ui
qt-gui/src/multimonitor/: monitor_dialog.cpp  monitor_dialog.h  monitor_dialog.ui  monitor_layout_preview_widget.cpp  monitor_layout_preview_widget.h
qt-gui/src/performance/: performance_dialog.cpp  performance_dialog.h  performance_dialog.ui
qt-gui/src/plugins/: plugin_manager.cpp  plugin_manager.h  plugin_manager.ui
qt-gui/src/settings/: settings_dialog.cpp  settings_dialog.h  settings_dialog.ui
qt-gui/src/utils/: gordp_bridge.cpp  gordp_bridge.h
qt-gui/src/virtualchannels/: virtual_channel_dialog.cpp  virtual_channel_dialog.h  virtual_channel_dialog.ui
qt-gui/tests/: cross_platform_test.cpp
(+102 files in other folders)
